# metis

./: .gitignore  .goto  AGENTS.ml.md  go.mod  pyproject.toml
atlas/: experiment.md  index.md
cmd/metis/: activity.go  activity_test.go  autostop.go  autostop_e2e_test.go  autostop_test.go  blaspins.go  blaspins_e2e_test.go  blaspins_test.go  blend.go  blend_test.go  board.go  board_test.go  caching.go  caching_soundness_test.go  caching_test.go  capture.go  capture_e2e_test.go  capture_test.go  cwdindep_e2e_test.go  e2e_test.go  exec.go  exec_test.go  family.go  family_test.go  fingerprints.go  fingerprints_test.go  forkexec.go  forkexec_test.go  helpers_test.go  identity_e2e_test.go  innerk_e2e_test.go  ledger.go  ledger_cmd.go  ledger_cmd_test.go  ledger_e2e_test.go  ledger_test.go  live_stop_test.go  live_test.go  main.go  nestedcv_e2e_test.go  (+29 more)
construct/: base.manifest
construct/datatype/: experiment-shape.md  experiment.md
construct/vocabulary/: experiment.cue
internal/repo/: repo.go  repo_test.go
metis/: __init__.py  dataset.py  encode.py  forkserver.py  io.py  model.py  schema.py  split.py  trace.py
metis/steps/: __init__.py  cv_split.py  outer_split.py  predict.py  train.py
pkg/cache/: cache.go  cache_test.go  transitived_test.go
pkg/cas/: cas.go  cas_test.go  fs.go  fs_test.go  mem.go  mem_test.go
pkg/experiment/: experiment.go  (+9 more)
tests/: test_dataset.py  test_encode.py  test_forkserver.py  test_io.py  test_io_confinement.py  test_model.py  test_outer_split.py  test_schema.py  test_split.py  test_steps.py  test_trace.py
workshop/: lessons.md
(+307 files in other folders)
